Attempt fix for #89 homepage ecosystem icon overlapping text on Linux at 1366px

--- a/content/_sass/partials/home/_features.scss
+++ b/content/_sass/partials/home/_features.scss
@@ -66,8 +66,10 @@
   text-align: center;
   width: 100%;
 
-  img {
+  .feature-img {
+    clear: both;
     height: 100px;
+    margin: 0 0 2px;
     width: 100px;
   }
 
